[v8.2] "searchScore"/"vectorSearchScore" warning log should only be logged when invalid usage

XMLWordPrintableJSON

    • Query Integration
    • Fully Compatible
    • ALL
    • v8.2
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Non-assignee request: What is the reason for requesting this backport?

      •  
      • We knowingly introduced a breaking change in SERVER-93521 which lands in 8.2. This change throws an error for malformed queries that reference "searchScore" or "vectorSearchScore" when unavailable in the pipeline. This should help users identify unintended behavior in their query. However, we decided users should have some more notice in case this may break their queries. This backport will have 8.2 log a warning instead of throwing an error. Then in 8.3, the error will be thrown. In the 8.2 time window, users can fix their queries so they don't fail during the 8.3 upgrade.

      Could this introduce any (intentional or unintentional) breaking changes? Please explain.

      • No. This removes a breaking change in 8.2.

      Could this change unintentionally cause tests to fail or introduce risk to internal tools and test infrastructure?

      • We do need to be careful about testing since the error-versus-logging behavior is tricky to test, but I do believe we've been comprehensive enough with the testing.

      What is the risk and potential customer impact of backporting this (or not backporting this)?

      • If we do not backport this, working queries (that incorrectly reference "searchScore" or "vectorSearchScore" may start breaking during 8.2 upgrade.

            Assignee:
            Will Buerger
            Reporter:
            Will Buerger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: