SERVER-108870: "searchScore"/"vectorSearchScore" warning log should only be logged when invalid usage (#39703)

GitOrigin-RevId: 2eccff6039929394453ffca59f30a6d1cba738ba